2009-01-05  Brent Fulgham  <bfulgham@gmail.com>

        Reviewed by Oliver Hunt.

        Fixes: https://bugs.webkit.org/show_bug.cgi?id=23027

        Removes the WebKitGraphics files from the Cairo build, as well
        as excluding their link definitions.  These are not used outside
        of Safari, and should not be part of the 'Redistributable API.'

        * WebKit.vcproj/WebKit.vcproj:  Update *_Cairo targets to exclude
          the WebKitGraphics.cpp/.h files.
        * WebKit.vcproj/WebKit_Cairo.def: Added.  File without Safari
          link definitions.
        * WebKit.vcproj/WebKit_Cairo_debug.def: Added.  File without Safari
          link definitions.

2009-01-05  Anders Carlsson  <andersca@apple.com>

        Reviewed by Jon Honeycutt.

        Add a simple, memory managed, wrapper around a VARIANT struuct.
        
        * COMVariantSetter.h:
        (COMVariant::COMVariant):
        (COMVariant::~COMVariant):
        (COMVariant::operator=):
        (COMVariant::copyTo):
        (COMVariant::variantType):

2009-01-05  Adele Peterson  <adele@apple.com>

        Windows build fix.

        * WebCoreSupport/WebChromeClient.cpp:

2009-01-05  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam Roben.

        Make it possible to have per value variant types.
        
        * COMPropertyBag.h:
        (::Read):
        Call variantType here, passing in the value.
        
        (::GetPropertyInfo):
        Ditto.
        
        * COMVariantSetter.h:
        (COMVariantSetterBase::variantType):
        Add COMVariantSetterBase, whose variantType implementation just returns the
        VariantType variable. Make all existing classes inherit from COMVariantSetterBase.

2009-01-05  Adam Treat  <adam.treat@torchmobile.com>

        Fix win build

        * WebCoreSupport/WebChromeClient.h:

2009-01-05  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by George Staikos.

        Build fix for contentsSizeChanged
